; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/mtu3/extr_mtu3_host.c_ssusb_host_cleanup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/mtu3/extr_mtu3_host.c_ssusb_host_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssusb_mtk = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ssusb_mtk*)* @ssusb_host_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ssusb_host_cleanup(%struct.ssusb_mtk* %0) #0 {
  %2 = alloca %struct.ssusb_mtk*, align 8
  store %struct.ssusb_mtk* %0, %struct.ssusb_mtk** %2, align 8
  %3 = load %struct.ssusb_mtk*, %struct.ssusb_mtk** %2, align 8
  %4 = getelementptr inbounds %struct.ssusb_mtk, %struct.ssusb_mtk* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.ssusb_mtk*, %struct.ssusb_mtk** %2, align 8
  %9 = getelementptr inbounds %struct.ssusb_mtk, %struct.ssusb_mtk* %8, i32 0, i32 0
  %10 = call i32 @ssusb_set_vbus(i32* %9, i32 0)
  br label %11

11:                                               ; preds = %7, %1
  %12 = load %struct.ssusb_mtk*, %struct.ssusb_mtk** %2, align 8
  %13 = call i32 @ssusb_host_disable(%struct.ssusb_mtk* %12, i32 0)
  ret void
}

declare dso_local i32 @ssusb_set_vbus(i32*, i32) #1

declare dso_local i32 @ssusb_host_disable(%struct.ssusb_mtk*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
